# SRI-FTSensor-SDK

./: .gitignore  CMakeLists.txt  README.md  test.cpp
examples/: CMakeLists.txt  test.cpp
include/sri/: commethernet.h  commethernet.hpp  ftsensor.h  ftsensor.hpp  sensorcomm.h  sensorcomm.hpp  sensorproto.h  types.h  types.hpp
res/: logo.ai
src/: commethernet.cpp  ftsensor.cpp  sensorcomm.cpp  sensorproto.cpp
